fix: fix size problem of help icon in visibility setting panel

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,6 +78,10 @@ mat-sidenav[data-style-dense] {
   @include mat.form-field-density(-3);
 }
 
+.small-icon-button-wrapper {
+  @include mat.icon-button-density(-3);
+}
+
 .mat-mdc-icon-button {
   @apply leading-none;
 }
